--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@ df$x
 ```
 
 ```
-## [1] 0.9771567 0.9291825 0.2437788 0.9296742 0.3290120
+## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
 ```
 
 ```r
@@ -1219,7 +1219,7 @@ df[["x"]]
 ```
 
 ```
-## [1] 0.9771567 0.9291825 0.2437788 0.9296742 0.3290120
+## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
 ```
 
 ```r
@@ -1228,7 +1228,7 @@ df[[1]]
 ```
 
 ```
-## [1] 0.9771567 0.9291825 0.2437788 0.9296742 0.3290120
+## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
 ```
 
 ---
@@ -1245,7 +1245,7 @@ df %&gt;% .$x
 ```
 
 ```
-## [1] 0.9771567 0.9291825 0.2437788 0.9296742 0.3290120
+## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
 ```
 
 ```r
@@ -1253,7 +1253,7 @@ df %&gt;% .[["x"]]
 ```
 
 ```
-## [1] 0.9771567 0.9291825 0.2437788 0.9296742 0.3290120
+## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
 ```
 
 --
@@ -2406,7 +2406,7 @@ x &lt;- if (y &lt; 20) "Too low" else "Too high"
 
 --
 
-* ### Otro muy útil: `ifelse(test, yes, no)`
+* ### Otro muy útil (pero lento): `ifelse(test, yes, no)`
 
 ---
 
@@ -2665,7 +2665,7 @@ output
 ```
 
 ```
-## [1]  0.46334334 -0.18955740 -0.08892017  0.59997372
+## [1] -0.330459766  0.266412434  0.004561521 -0.222964076
 ```
 
 --
@@ -2701,9 +2701,9 @@ str(out)
 
 ```
 ## List of 3
-##  $ : num [1:29] -0.117 -0.461 -1.061 -2.87 -1.398 ...
-##  $ : num [1:94] 1.175 1.553 2.113 0.781 1.895 ...
-##  $ : num [1:45] 1.379 0.52 0.032 2.415 3.399 ...
+##  $ : num [1:25] 0.164 0.235 0.997 -1.122 3.205 ...
+##  $ : num 0.0334
+##  $ : num [1:39] 1.93 3.29 3.38 1.89 4.77 ...
 ```
 
 ```r
@@ -2711,7 +2711,7 @@ str(unlist(out))
 ```
 
 ```
-##  num [1:168] -0.117 -0.461 -1.061 -2.87 -1.398 ...
+##  num [1:65] 0.164 0.235 0.997 -1.122 3.205 ...
 ```
 
 ---
@@ -2797,7 +2797,7 @@ col_summary(df, median)
 ```
 
 ```
-## [1]  0.46334334 -0.18955740 -0.08892017  0.59997372
+## [1] -0.330459766  0.266412434  0.004561521 -0.222964076
 ```
 
 ```r
@@ -2805,7 +2805,7 @@ col_summary(df, mean)
 ```
 
 ```
-## [1]  0.4476999 -0.2077740  0.2344563  0.6316893
+## [1] -0.2556685  0.4975547  0.0889726 -0.0114171
 ```
 
 ---
@@ -2860,8 +2860,8 @@ map_dbl(df, mean, trim = 0.5)
 ```
 
 ```
-##           a           b           c           d 
-##  0.46334334 -0.18955740 -0.08892017  0.59997372
+##            a            b            c            d 
+## -0.330459766  0.266412434  0.004561521 -0.222964076
 ```
 
 --
@@ -3063,9 +3063,9 @@ map2(mu, sigma, rnorm, n = 5) %&gt;% str()
 
 ```
 ## List of 3
-##  $ : num [1:5] 5.84 5.28 4.13 5.19 5.04
-##  $ : num [1:5] 19.95 11.72 15.39 14.69 5.23
-##  $ : num [1:5] -24.58 -3.29 10.2 -5.83 -9.03
+##  $ : num [1:5] 6.33 3.42 3.41 5.17 4.31
+##  $ : num [1:5] -2.06 9.59 9.84 17.04 10.96
+##  $ : num [1:5] 2.86 -6.61 -1.92 -5.46 -4.99
 ```
 
 ---
@@ -3100,9 +3100,9 @@ args1 %&gt;%
 
 ```
 ## List of 3
-##  $ : num 3.59
-##  $ : num [1:3] 22.75 12.37 6.36
-##  $ : num [1:5] -28.5628 -5.8762 0.0555 -3.39 -11.316
+##  $ : num 6.92
+##  $ : num [1:3] 15.21 6.18 9.48
+##  $ : num [1:5] -1.89 -8.64 -11.2 -9 1.66
 ```
 
 ---
@@ -3138,9 +3138,9 @@ args2 %&gt;%
 
 ```
 ## List of 3
-##  $ : num 3.89
-##  $ : num [1:3] 16.87 12.98 5.93
-##  $ : num [1:5] -4.12 -15.68 7.44 12.55 4.96
+##  $ : num 4.06
+##  $ : num [1:3] 13.3 14.2 13
+##  $ : num [1:5] -6.4 -2.37 -22.94 -9.03 -8.67
 ```
 
 ---
@@ -3179,9 +3179,9 @@ invoke_map(f, param, n = 5) %&gt;% str()
 
 ```
 ## List of 3
-##  $ : num [1:5] -0.4794 0.9645 0.2218 0.0657 -0.8464
-##  $ : num [1:5] 9.95 10.52 -1.34 -3.27 -3.2
-##  $ : int [1:5] 10 9 9 14 10
+##  $ : num [1:5] 0.319 0.33 -0.378 0.161 0.889
+##  $ : num [1:5] -0.487 -2.38 -6.387 8.259 -0.337
+##  $ : int [1:5] 12 6 9 2 17
 ```
 
 ---
@@ -3282,7 +3282,22 @@ class: inverse, center, middle
 
 ]]
 
+---
 
+# 4. Comunicar
+
+### ¡El último ejercicio!
+
+* Queremos construir un  [Flexdashboards](https://rmarkdown.rstudio.com/flexdashboard/index.html) para nuestro análisis de los datos `who` de Tuberculosis.
+
+* Vamos a usar estos dos ejemplos como punto de partida: 
+ 1. [Shiny: ggplot2 linked brushingg](https://jjallaire.shinyapps.io/shiny-ggplot2-brushing/)
+ 2. [Shiny biclust example](https://jjallaire.shinyapps.io/shiny-biclust/)
+
+* Podríamos intentar, por ejemplo:
+ * incluir las series temporales para cada sexo y agrupadas por edad,
+ * incluir una tabla de resumen numérico,
+ * como hay mucha información, esta tabla debería ser solo para año y país seleccionado por el usuario.
 
 ---
 # ¡Gracias por aguantar hasta el final!
