--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@ class: inverse, center, middle
 
 ```r
 iris
-as_tible(iris)
+as_tibble(iris)
 ```
 
 --
@@ -1211,7 +1211,7 @@ df$x
 ```
 
 ```
-## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
+## [1] 0.4237939 0.8147334 0.6497222 0.1751323 0.5940944
 ```
 
 ```r
@@ -1219,7 +1219,7 @@ df[["x"]]
 ```
 
 ```
-## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
+## [1] 0.4237939 0.8147334 0.6497222 0.1751323 0.5940944
 ```
 
 ```r
@@ -1228,7 +1228,7 @@ df[[1]]
 ```
 
 ```
-## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
+## [1] 0.4237939 0.8147334 0.6497222 0.1751323 0.5940944
 ```
 
 ---
@@ -1245,7 +1245,7 @@ df %&gt;% .$x
 ```
 
 ```
-## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
+## [1] 0.4237939 0.8147334 0.6497222 0.1751323 0.5940944
 ```
 
 ```r
@@ -1253,7 +1253,7 @@ df %&gt;% .[["x"]]
 ```
 
 ```
-## [1] 0.78644391 0.88808820 0.52275189 0.07182775 0.27719057
+## [1] 0.4237939 0.8147334 0.6497222 0.1751323 0.5940944
 ```
 
 --
@@ -2665,7 +2665,7 @@ output
 ```
 
 ```
-## [1] -0.330459766  0.266412434  0.004561521 -0.222964076
+## [1] 0.07976094 0.14692214 0.06237045 0.12371566
 ```
 
 --
@@ -2701,9 +2701,9 @@ str(out)
 
 ```
 ## List of 3
-##  $ : num [1:25] 0.164 0.235 0.997 -1.122 3.205 ...
-##  $ : num 0.0334
-##  $ : num [1:39] 1.93 3.29 3.38 1.89 4.77 ...
+##  $ : num [1:96] 0.737 -1.885 0.261 -1.758 0.807 ...
+##  $ : num [1:86] 0.198 -3.241 2.225 0.852 3.072 ...
+##  $ : num [1:81] 2.9 1.7 1.05 2.45 3.4 ...
 ```
 
 ```r
@@ -2711,7 +2711,7 @@ str(unlist(out))
 ```
 
 ```
-##  num [1:65] 0.164 0.235 0.997 -1.122 3.205 ...
+##  num [1:263] 0.737 -1.885 0.261 -1.758 0.807 ...
 ```
 
 ---
@@ -2797,7 +2797,7 @@ col_summary(df, median)
 ```
 
 ```
-## [1] -0.330459766  0.266412434  0.004561521 -0.222964076
+## [1] 0.07976094 0.14692214 0.06237045 0.12371566
 ```
 
 ```r
@@ -2805,7 +2805,7 @@ col_summary(df, mean)
 ```
 
 ```
-## [1] -0.2556685  0.4975547  0.0889726 -0.0114171
+## [1]  0.3276395 -0.1189796  0.0509754  0.0800364
 ```
 
 ---
@@ -2860,8 +2860,8 @@ map_dbl(df, mean, trim = 0.5)
 ```
 
 ```
-##            a            b            c            d 
-## -0.330459766  0.266412434  0.004561521 -0.222964076
+##          a          b          c          d 
+## 0.07976094 0.14692214 0.06237045 0.12371566
 ```
 
 --
@@ -3063,9 +3063,9 @@ map2(mu, sigma, rnorm, n = 5) %&gt;% str()
 
 ```
 ## List of 3
-##  $ : num [1:5] 6.33 3.42 3.41 5.17 4.31
-##  $ : num [1:5] -2.06 9.59 9.84 17.04 10.96
-##  $ : num [1:5] 2.86 -6.61 -1.92 -5.46 -4.99
+##  $ : num [1:5] 6.5 3.87 5.36 7.65 2.78
+##  $ : num [1:5] 16.5 11.6 11.6 13.7 11.4
+##  $ : num [1:5] -25.872 0.465 -0.679 6.686 -18.083
 ```
 
 ---
@@ -3100,9 +3100,9 @@ args1 %&gt;%
 
 ```
 ## List of 3
-##  $ : num 6.92
-##  $ : num [1:3] 15.21 6.18 9.48
-##  $ : num [1:5] -1.89 -8.64 -11.2 -9 1.66
+##  $ : num 4.72
+##  $ : num [1:3] 3.34 3.4 3.4
+##  $ : num [1:5] -12.56 -6.1 -15.62 3.74 -9.75
 ```
 
 ---
@@ -3138,9 +3138,9 @@ args2 %&gt;%
 
 ```
 ## List of 3
-##  $ : num 4.06
-##  $ : num [1:3] 13.3 14.2 13
-##  $ : num [1:5] -6.4 -2.37 -22.94 -9.03 -8.67
+##  $ : num 5.63
+##  $ : num [1:3] 6.87 10.39 14.25
+##  $ : num [1:5] 16.47 -15.99 -7.94 3.58 11.69
 ```
 
 ---
@@ -3179,9 +3179,9 @@ invoke_map(f, param, n = 5) %&gt;% str()
 
 ```
 ## List of 3
-##  $ : num [1:5] 0.319 0.33 -0.378 0.161 0.889
-##  $ : num [1:5] -0.487 -2.38 -6.387 8.259 -0.337
-##  $ : int [1:5] 12 6 9 2 17
+##  $ : num [1:5] -0.444 0.811 -0.578 -0.634 0.515
+##  $ : num [1:5] 9.45 -9.06 -7.36 1.5 3.48
+##  $ : int [1:5] 12 9 11 8 6
 ```
 
 ---
